Improved 6657133 test